# bcpywork

./: .gitignore  README.md  app.py  constants.py  disks.py  event_handler.py  gui.py  lister.py  pyproject.toml  setup.py  uninstall.py  ~$prezentacio.pptx
data/: binaris_search.py  config.yaml  data_to_interface.py  dataclass_drive_manager.py  dataclass_file_manager.py  dataclass_folder_manager.py  disk_manager.py  dspace_manager.py  event_handler.py  file_folder_managing.py  function_timer.py  lister.py  path_manager.py
data/util/: disk_util.py
interface/: controller.py  gui.py  notifications.py
